feat: configurar entorno y servicios para la API de productos

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,6 +3,10 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./src",               // ✅ Añadir esta línea
+    "paths": {                        // ✅ Añadir estas líneas
+      "src/*": ["*"]
+    },
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
