feat: update hosting cache and improve Angular configuration
- Updated the Firebase hosting cache to include new build artifacts and removed obsolete entries.
- Changed Angular build configuration from 'application' to 'browser' for better compatibility.
- Adjusted paths in tsconfig.json to ensure correct module resolution.
- Enhanced the ProductosService to properly inject HttpClient and corrected the environment import path.
- Updated package-lock.json to reflect dependency upgrades and added new packages for improved functionality.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,7 +5,7 @@
   "compilerOptions": {
     "baseUrl": "./src",               // ✅ Añadir esta línea
     "paths": {                        // ✅ Añadir estas líneas
-      "src/*": ["*"]
+      "src/*": ["src/*"]
     },
     "outDir": "./dist/out-tsc",
     "strict": true,
